# monkey

./: .hgignore  README.md
cpp/: CMakeLists.txt  README.md  ast.h  ast_visitor.h  eval.h  lexer.h  main.cpp  object.h  parser.h  repl.h  token.h
cpp/tests/: CMakeLists.txt  tests_main.cpp
d/: README.md  dub.json
d/source/: app.d
d/source/ast/: ast.d
d/source/lexer/: lexer.d
d/source/parser/: parser.d
d/source/repl/: repl.d
d/source/token/: token.d
go/: README.md
go/src/monkey/ast/: ast.go  modify_test.go
go/src/monkey/evaluator/: builtins.go  evaluator.go  evaluator_test.go  macro_expansion.go  macro_expansion_test.go  quote_unquote_test.go
go/src/monkey/lexer/: lexer.go  lexer_test.go
go/src/monkey/object/: environment.go  object.go  object_test.go
go/src/monkey/parser/: parser.go  parser_test.go
go/src/monkey/repl/: repl.go
go/src/monkey/token/: token.go
scala/: README.md  build.sbt
scala/project/: plugins.sbt
scala/src/main/scala/monkey/: ast.scala  eval.scala  lexer.scala  main.scala  parser.scala  repl.scala  token.scala  value.scala
scala/src/test/scala/monkey/: ast_test.scala  evaluator_test.scala  lexer_test.scala  parser_test.scala
src/monkey/: main.go
src/monkey/ast/: ast.go
src/monkey/evaluator/: evaluator.go  evaluator_test.go
src/monkey/lexer/: lexer.go  lexer_test.go
src/monkey/parser/: parser.go  parser_test.go
src/monkey/repl/: repl.go
src/monkey/token/: token.go
